# rust-webapeplication

./: Cargo.toml  Makefile  README.md  ab_benchmark.sh  oha_benchmark.sh  post_data.txt
python-implementation/: ape_index.py  ape_index_lib.py  test_ape_lib.py
src/: main.rs
src/lib/: ape.rs  mod.rs  structs.rs
src/routes/: ape.rs  ape_get.rs  ape_post.rs  http_404_handler.rs  mod.rs
