[package]
name = "ape-index-http"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.8"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.145"
validator = { version = "0.16", features = ["derive"] }
