[package]
name = "ape-index-http"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.219"
validator = { version = "0.20.0", features = ["derive"] }
